--- a/packages/frontend/components/HomeBoard/styles.module.scss
+++ b/packages/frontend/components/HomeBoard/styles.module.scss
@@ -6,9 +6,8 @@ $phone-font-size: 12px;
 
 .container {
   display: grid;
-  grid-template-areas:
-    'title  button'
-    'masonry_grid masonry_grid';
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
   grid-row-gap: 1em;
   justify-content: space-between;
   align-items: center;
@@ -16,12 +15,7 @@ $phone-font-size: 12px;
   font-size: $normal-font-size;
   padding: 3em;
 
-  h2 {
-    grid-area: title;
-  }
-
   .button {
-    grid-area: button;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -37,27 +31,21 @@ $phone-font-size: 12px;
     background: $dark-orange;
   }
 
-  .masonry_grid {
-    grid-area: masonry_grid;
-    display: -webkit-box; /* Not needed if autoprefixing */
-    display: -ms-flexbox; /* Not needed if autoprefixing */
-    display: flex;
-    margin-left: -30px; /* gutter size offset */
-    width: auto;
-  }
-
-  .my-masonry-grid_column {
-    padding-left: 30px; /* gutter size */
-    background-clip: padding-box;
+  .masonry {
+    grid-column: 1 / 3;
   }
 
   @media only screen and (max-width: $breakpoint-tablet) {
     font-size: $tablet-font-size;
     grid-template-columns: 1fr;
-    grid-template-areas: 'title' 'button' 'masonry_grid';
+    grid-template-rows: auto auto auto;
 
     .button {
       margin-left: 0;
+    }
+
+    .masonry {
+      grid-column: 1;
     }
   }
 
