Make fonts responsive

--- a/packages/frontend/components/Video/videoBoard.module.scss
+++ b/packages/frontend/components/Video/videoBoard.module.scss
@@ -28,7 +28,7 @@
 .title{
     display: inline;
     color: $white;
-    font-size: 36px;
+    font-size: 1.5em;
     font-weight: 700;
 }
 
@@ -36,7 +36,7 @@
     display: inline;
     color: $white;
     font-style: italic;
-    font-size: 36px;
+    font-size: 1.75em;
     font-weight: 600;
 }
 
