--- a/packages/frontend/pages/credits/index.module.scss
+++ b/packages/frontend/pages/credits/index.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .credits {
   color: white;
 
@@ -19,5 +21,13 @@
     display: grid;
     align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  }
+}
+
+@media only screen and (max-width: $breakpoint-phone) {
+  .credits {
+    .content {
+      margin: 2em;
+    }
   }
 }
