--- a/packages/frontend/pages/credits/index.module.scss
+++ b/packages/frontend/pages/credits/index.module.scss
@@ -17,6 +17,7 @@ $transparent: #ffffff00;
   }
   
   .title {
+    margin: 0 1em;
     text-align: center;
     font-size: 3em;
   }
@@ -30,7 +31,7 @@ $transparent: #ffffff00;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     justify-items: center;
-    margin: 3em 5em;
+    margin: 2em 5em 3em 5em; 
   }
 
   .member {
@@ -42,6 +43,11 @@ $transparent: #ffffff00;
   .credits {
     .content {
       margin: 2em;
+      text-align: center;
+    }
+
+    .members {
+      margin: 2em 0 3em 0;
     }
   }
 }
