--- a/packages/frontend/components/ToTheTopButton/ToTheTopButton.module.scss
+++ b/packages/frontend/components/ToTheTopButton/ToTheTopButton.module.scss
@@ -1,8 +1,14 @@
 @import 'styles/variables';
+$height: 2.4em;
 
 .container {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  bottom: 0;
+  z-index: 2;
   display: grid;
   justify-content: center;
+  padding: 1em;
 
   .button {
     cursor: pointer;
@@ -10,17 +16,17 @@
     grid-template-columns: auto auto;
     align-items: center;
     z-index: 1;
-  
+
     color: $white;
     background: $gray;
-    height: 2.4em;
+    height: $height;
     width: 8.4em;
     border-radius: 10px;
-  
+
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
-  
+
     img {
       width: 1em;
       right: 0;
@@ -31,6 +37,10 @@
       background: $dark-gray;
     }
   }
+}
+
+.container.hide {
+  bottom: -4 * $height;
 }
 
 @media only screen and (max-width: $breakpoint-tablet) {
