--- a/packages/frontend/components/ToTheTopButton/ToTheTopButton.module.scss
+++ b/packages/frontend/components/ToTheTopButton/ToTheTopButton.module.scss
@@ -17,7 +17,7 @@
     width: 8.4em;
     border-radius: 10px;
   
-    font-size: 36px;
+    font-size: 2em;
     font-style: normal;
     font-weight: 700;
   
@@ -36,7 +36,7 @@
 @media only screen and (max-width: $breakpoint-tablet) {
   .container {
     .button {
-      font-size: 6vw;
+      font-size: 1.5em;
     }
   }
 }
