--- a/packages/frontend/pages/credits/index.module.scss
+++ b/packages/frontend/pages/credits/index.module.scss
@@ -13,7 +13,7 @@ $transparent: #ffffff00;
   }
 
   .content {
-    margin: 3em 5em;
+    margin: 3em 20%;
   }
   
   .title {
@@ -35,7 +35,7 @@ $transparent: #ffffff00;
   }
 
   .member {
-    flex: 0 0 240px;
+    flex: 0 0 100%;
     text-align: center;
     margin: 0.2em;
   }
