--- a/packages/frontend/components/MessageCards/MessageCard.module.scss
+++ b/packages/frontend/components/MessageCards/MessageCard.module.scss
@@ -37,7 +37,7 @@
   }
 
   .message {
-    font-size: 16px;
+    font-size: 1em;
     text-align: left;
     margin-top: 40px;
     margin-left: 49px;
@@ -51,7 +51,7 @@
     margin-top: 10px;
     margin-right: 20px;
     margin-bottom: 14px;
-    font-size: 20px;
+    font-size: 1.2em;
     font-family: 'Open Sans';
     font-weight: 800;
   }
