--- a/packages/frontend/components/HomeBoard/styles.module.scss
+++ b/packages/frontend/components/HomeBoard/styles.module.scss
@@ -1,9 +1,5 @@
 @import 'styles/variables';
 
-$normal-font-size: 24px;
-$tablet-font-size: 20px;
-$phone-font-size: 12px;
-
 .container {
   display: grid;
   grid-template-columns: auto auto;
@@ -12,7 +8,7 @@ $phone-font-size: 12px;
   justify-content: space-between;
   align-items: center;
   color: $white;
-  font-size: $normal-font-size;
+  font-size: 1.5em;
   padding: 3em;
 
   .button {
@@ -36,7 +32,7 @@ $phone-font-size: 12px;
   }
 
   @media only screen and (max-width: $breakpoint-tablet) {
-    font-size: $tablet-font-size;
+    font-size: 1.33em;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto;
 
@@ -50,6 +46,7 @@ $phone-font-size: 12px;
   }
 
   @media only screen and (max-width: $breakpoint-phone) {
-    font-size: $phone-font-size;
+	  font-size: 1.15em;
+    padding: 1em;
   }
 }
