--- a/packages/frontend/styles/globals.scss
+++ b/packages/frontend/styles/globals.scss
@@ -13,6 +13,7 @@ html {
   background: $background;
   cursor: url('/plug-type-asacoco.cur'), default;
   scroll-behavior: smooth;
+  font-size: 16px;
 }
 body {
   margin: 0;
