--- a/packages/frontend/components/InfiniteScrolling/styles.module.scss
+++ b/packages/frontend/components/InfiniteScrolling/styles.module.scss
@@ -8,7 +8,7 @@
 .end_message {
   color: $white;
   text-align: center;
-  font-size: 1em;
+  font-size: 1.25rem;
   width: 100%;
   margin: 1em 0;
 }
